2009-06-14 Suzana Matos <suzana.matos@gmail.com>
* The client can sign up for his own
	- TODO: the main page
* Fixed autorize of tipos_apartamentos

2009-06-14 Suzana Matos <suzana.matos@gmail.com>
* Fixed reservas for cliente

2009-06-14 Iuri Fernandes <iurifq@gmail.com>
* "Consulta 4" done

2009-06-14 Suzana Matos <suzana.matos@gmail.com>
* application controller : added authorize of cliente
* cliente : created menu, controller and view
* hospede : 
	- added login, password and email in DB 
	- added some functions to validate and login
* reserva : 
	- changed the way to 'authorize'
	- fixed all views to show the right thing to client and admin
* tipo_apartamento : every one can see

2009-06-13 Suzana Matos <suzana.matos@gmail.com>
* reservas : fixed.
	- you can't reserve in a day before today

2009-05-26 Iuri Fernandes <iurifq@gmail.com>
* Created link to pagar

2009-05-26 Suzana Matos <suzana.matos@gmail.com>
* Changed all :first to :last

2009-05-26 Iuri Fernandes <iurifq@gmail.com>
* Forgot to add some files
* Modified tables

2009-05-26 Iuri Fernandes <iurifq@gmail.com>
* Created view in contas to see the current contas

2009-05-26 Iuri Fernandes <iurifq@gmail.com>
* Fixed bug in hospedar
* Began /views/contas/view.html.erb

2009-05-26 Suzana Matos <suzana.matos@gmail.com>
* Added redirection after encerrar

2009-05-25 Iuri Fernandes <iurifq@gmail.com>
* Alterations on alugar

2009-05-26 Iuri Fernandes <iurifq@gmail.com>
* began encerrar

2009-05-26 Suzana Matos <suzana.matos@gmail.com>
* Just adding all models

2009-05-26 Suzana Matos <suzana.matos@gmail.com>
* view/contas/encerrar : tried to do.... but it's not working and i don't know how
to do
* createTable : change all fk* to *_id
	- and almost all files was changed because os this
* define encerrar method

2009-05-26 Suzana Matos <suzana.matos@gmail.com>
* db/createTable.sql : 
	- added lotação in tipos_apartamentos
	- created contas_encerradas