@@ -7,6 +7,7 @@
 <p><%= link_to 'Serviços', :controller => "servicos", :action => "index" %></p>
 <p><%= link_to 'Tipos de pagamentos', :controller => "tipos_pagamentos", :action => "index" %></p>
 <p><%= link_to 'Contas', :controller => "contas", :action => "index" %></p>
+<p><%= link_to 'Consultas', :controller => "contas", :action => "index" %></p>
 
 <h2>:: Hospedes</h2>
 <p><%= link_to 'Hospedes', :controller => "hospedes", :action => "index" %></p>
